# mtfmapper

./: CMakeLists.txt  todo.txt  ubuntu_build_notes.txt
cmake_helpers/: FindOpenCV.cmake
doc/: CMakeLists.txt  mtf_mapper.tex
doc/html/: footnode.html  mtf_mapper.html
include/: afft.h  autocrop.h  bayer.h  block.h  bundle.h  common_types.h  component_labelling.h  config.h.in  demosaic.h  distance_scale.h  edge_record.h  ellipse.h  ellipse_decoder.h  fiducial_positions.h  five_point_focal_length_radial_distortion.h  focus_surface.h  gamma_lut.h  gaussfilter.h  gradient.h  loess_fit.h  mtf50_correction_polynomials.h  mtf50_edge_quality_rating.h  mtf_core.h  mtf_core_tbb_adaptor.h  mtf_profile_sample.h  mtf_renderer.h  mtf_renderer_annotate.h  mtf_renderer_edges.h  mtf_renderer_esf.h  mtf_renderer_focus.h  mtf_renderer_grid.h  mtf_renderer_lensprofile.h  mtf_renderer_mfprofile.h  mtf_renderer_print.h  mtf_renderer_profile.h  mtf_renderer_stats.h  mtf_tables.h  peak_detector.h  point_helpers.h  ratpoly_fit.h  (+5 more)
manpages/: CMakeLists.txt  mtf_generate_rectangle.nroff  mtf_generate_test_chart.nroff  mtf_mapper.nroff  mtf_mapper_gui.nroff
src/: component_labelling.cc  demosaic.cc  ellipse.cc  find_polynomial_roots_jenkins_traub.cc  five_point_focal_length_radial_distortion.cc  gradient.cc  loess_fit.cc  mtf_core.cc  mtf_mapper.cc  mtf_tables.cc  point_helpers.cc  thresholding.cc
src/generator/: airy_sampler.h  bessel.cc  bessel.h  generate_rectangle.cc  geom.h  gh_clipping.cc  gh_clipping.h  multipolygon_geom.h  noise_source.h  normal_sampler.h  polygon_geom.h  quadtree.h  render.h  render_importance_sampling.h  render_integral.h  render_is_airy.h  render_is_airybox.h  render_is_airyolpf.h  render_poly.h
src/gui/: about_dialog.cc  exiv2_property.cc  exiv2_property.h  help_dialog.cc  help_dialog.h  img_frame.cc  img_frame.h  imgviewer.cc  imgviewer.h  main.cc  mtfm.qrc  mtfmapper_app.cc  mtfmapper_app.h  settings_dialog.cc  settings_dialog.h  worker_thread.cc  worker_thread.h
src/test_chart_generator/: generate_test_chart.cc  svg_page.h  svg_page_focus.h  svg_page_grid.h  svg_page_lensgrid.h  svg_page_manualperspective.h  svg_page_perspective.h
test/: batch.sh  build_test_charts.sh
